Eclipse 2023-03: Sources and features to show; "work in progress" banner